##### Changes
Route add download
Controller by adding all functions

### Mise à jour :

|Elements | router | controller | schema |
|--|--|--|--|
| Persistence | o | o | o |
| Persistence Limits Standards|--|--| o |
| Persistence Methods |  |  | o |
| Persistence Standars|--|--| o |
| cities | o | o | x |
| Countries | o | o | x |
| Locations| o | o | x |
|--|--|--|--|
|  |  |  |  |
|--|--|--|--|

### Swagger re-integration :

This is based on [# Building a Swagger-Enabled Node.js API with Express](https://www.c-sharpcorner.com/article/building-a-swagger-enabled-node-js-api-with-express/).

Be sure typescript is install with

    npm  install swagger-jsdoc --save
    npm  install swagger-ui-express --save

Create Swagger Configuration

    const options = {
  definition: {
    openapi: '3.0.0',
    info: {
      title: 'Student Management System',
      version: '1.0.0',
      description: 'Student Management System covered Create, Read, Update, and Delete operations using a Node.js API',
    },
    servers:[
      {url:'http://localhost:5000/api'}, //you can change you server url
    ],
  },

  apis: ['./routes/*.js'], //you can change you swagger path
};

Integrate Swagger Middleware in index.js

    const swaggerUi =  require('swagger-ui-express');
    const swaggerJsdoc =  require('swagger-jsdoc');
// Initialize swagger-docs
const specs =  swaggerJsdoc(options);
// Serve swagger documentation
app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(specs));
