# src/docs/swagger.json
@@ -27,23 +27,106 @@
       "description": "Default Service Display Status"
     },
 
+
     {
-      "name": "Businesses/Entities",
-      "description": "The administration ENTITIES part of the application"
+      "name": "Alarms/alarms",
+      "description": "Alarms oprations"
     },
     {
+      "name": "Alarms/classes",
+      "description": "Alarms classes associated to alarms"
+    },
+    {
+      "name": "Alarms/groupes",
+      "description": "Alarms groupes to group alarms"
+    },
+    {
+      "name": "Alarms/renders",
+      "description": "Alarms renders sepecify a rendering way"
+    },
+
+
+
+    {
+      "name": "Analyses/allowed",
+      "description": "Analyses allowed on sample points"
+    },
+    {
+      "name": "Analyses/categories",
+      "description": "Analyses categories classifie analyses"
+    },
+    {
+      "name": "Analyses/groupes",
+      "description": "Analyses groupes allowed to regroup analyses"
+    },
+    {
+      "name": "Analyses/methods",
+      "description": "Analyses methods to followed on type analyses"
+    },
+    {
+      "name": "Analyses/points",
+      "description": "Analyses points described sampling points"
+    },
+    {
+      "name": "Analyses/types",
+      "description": "Analyses types on sample points"
+    },
+
+
+
+
+    {
       "name": "Businesses/Businesses",
-      "description": "The administration BUSINESSES part of the application"
+      "description": "Businesses of an entity"
     },
     {
       "name": "Businesses/Companies",
-      "description": "The human resources COMPANIES part of the application"
+      "description": "Businesses companies are associated to a business"
+    },
+    {
+      "name": "Businesses/Entities",
+      "description": "Businesses entities are top level structure or coporate"
     },
 
+
+
     {
-      "name": "HR",
-      "description": "The human resources part of the application"
+      "name": "Connexions/machines",
+      "description": "Connexions machines discribes communication components"
+    },
+    {
+      "name": "Connexions/machinesDrivers",
+      "description": "Connexions drivers defines communication protocol"
+    },
+
+    
+    {
+      "name": "Localisations/locations",
+      "description": "Locations refer to geographic positions or addresses"
+    },
+    {
+      "name": "Localisations/Cities",
+      "description": "Informations related to cities"
+    },
+    {
+      "name": "Localisations/Countries",
+      "description": "Informations related to countries"
+    },
+    {
+      "name": "Localisations/Regions",
+      "description": "Informations related to regions or continent"
+    },
+    {
+      "name": "Localisations/States",
+      "description": "Informations related to states or province"
+    },
+    {
+      "name": "Localisations/SubRegions",
+      "description": "Informations related to sub regions "
     }
+
+
+
   ],
   "schemes": ["https", "http"],
   "securityDefinitions": {
@@ -56,10 +139,10 @@
   "consumes": ["application/json"],
   "produces": ["application/json", "text/json", "text/plain", "text/html"],
   "paths": {
-    "/": {
+    "/docs": {
       "get": {
         "tags": ["Home"],
-        "summary": "Default Swagger OBI API Documentation",
+        "summary": "OBI API Documentation",
         "description": "## Description <br /> Allow you to confirm API service stated",
         "produces": ["text/html"],
         "responses": {
